--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@google/genai": "^1.28.0",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@splinetool/react-spline": "^4.1.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.81.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
@@ -26,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
