--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@google/genai": "^1.28.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-separator": "^1.1.8",
@@ -31,6 +33,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
